frontend/tests/cases/negative/coeffectKindVars.gr
foo : forall {k : Coeffect, k' : Coeffect, c : k, c' : k', a : Type} . a [c] -> a [c * c']
foo [x] = [x]